test_data/streamwalk/valid/numbers/02_float.case
# OPTIONS

MODE: AJIS
COMMENTS: off
DIRECTIVES: off
IDENTIFIERS: off
MAX_DEPTH: 64
MAX_TOKEN_BYTES: 1048576

# INPUT

3.14159265359

# EXPECTED

NUMBER b"3.14159265359"
END_DOCUMENT
