test_data/streamwalk/invalid/limits/02_max_token_bytes.case
# OPTIONS

MODE: AJIS
COMMENTS: off
DIRECTIVES: off
IDENTIFIERS: off
MAX_DEPTH: 64
MAX_TOKEN_BYTES: 3

# INPUT

"abcd"

# EXPECTED

ERROR max_token_bytes_exceeded offset=0
